lib/tests/ui/non_serializable_return_value.stderr
error[E0277]: the trait bound `for<'de> Number: Deserialize<'de>` is not satisfied
 --> tests/ui/non_serializable_return_value.rs:5:64
  |
5 |     async fn subtract(&self, subtrahend: i64, minuend: i64) -> Number;
  |                                                                ^^^^^^ the trait `for<'de> Deserialize<'de>` is not implemented for `Number`
  |
  = help: the following other types implement trait `Deserialize<'de>`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: required for `Number` to implement `DeserializeOwned`
note: required by a bound in `Math::send_request`
 --> tests/ui/non_serializable_return_value.rs:3:1
  |
3 | #[jsonrpc_client::api]
  | ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Math::send_request`
  = note: this error originates in the attribute macro `jsonrpc_client::api` (in Nightly builds, run with -Z macro-backtrace for more info)
