lib/tests/ui/non_serializable_return_value.rs
struct Number;

#[jsonrpc_client::api]
pub trait Math {
    async fn subtract(&self, subtrahend: i64, minuend: i64) -> Number;
}

fn main() {}
